--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
   </p>
 
   <div class="flex justify-center space-x-6 text-3xl">
-    <a href="https://www.instagram.com/wisna.sen/" 
+    <a href="https://www.instagram.com/" 
         class="border-gray-200 animate-fadeInUp" target="_blank">
       <i class="ri-instagram-line"></i>
     </a>
@@ -454,7 +454,5 @@
 }
 
 </style>
-
-
   </body>
 </html>
